    - set_status_code now automatically calls Response.code(), allowing use of integers and kwargs
    - Added account.html (sent through /home.html if logged in)

ALPHA v0.0.1.1
    - Response can now take codes and bodies in init
    - Changes to header field management
    - Fixed a problem where the navbar wouldn't load in the right order
    - Extensive work on account.html

ALPHA v0.0.1.2
    - Several bug fixes throughout main.py and server.py
    - Changed button styles
    - Properly integrated account.html with main.py; for testing purposes, visiting home.html automatically logs you in as Central Bank
    - navbar is handled more by Response
    - Logout button in account.html is functional
    - Actions now have .act extension in main.py

ALPHA v0.0.1.3
    - Created template.html, login.html, news.html
    - Converted login to POST; login.html works
    - Changed navbar items and links (needs diff when logged in)

ALPHA v0.0.1.4
    - Working sign-up page, accessible through login.html
    - Signup action is now POST-based

#------------MAJOR UPDATE------------# (finished the last of the core actions)

ALPHA v0.0.2.0
    - Converted pay.act to POST
    - Created pay.html, working payment system (account.html button TRANSACT)
    - Created a test user under ID 0001, can test payment with it
    - CentralBank has abstracted balance of Infinity, handled by a class in account.py (may be subject to severe bugs)

ALPHA v0.0.2.1
    - Removed redundant GET actions
    - Configurable (separated by pipe) navbar options for whether logged in or not
    - Navbar option '_' ignores the navbar item; use for when logged in or not and a NEW option should appear

ALPHA v0.0.2.2
    - Individually-recorded transaction history
    - Transactions now have recorded ids
    - Added a homemade encryption algorithm (and it's pretty damn unbreakable) if needed; encrypt.py