@@ -7,3 +7,10 @@
 1377 -> 0001; Cr0.54; (6984350884698268333)
 1377 -> 0001; Cr1.0; (1048599277596537556)
 0001 -> 1377; Cr0.98; (2792937210218044416)
+1377 -> 0001; Cr1.54; (15563620088301679653)
+0001 -> 1377; Cr0.05; ( 647894095157946809)
+1377 -> 0001; Cr1.54; (8216967508371101258)
+0001 -> 1377; Cr1.0; (15990623277769804751)
+1377 -> 0001; Cr1.54; ( 929737256116759156)
+1377 -> 0001; Cr0.34; (1818845169458672389)
+0001 -> 1377; Cr1.0; (7661428882951882336)
