@@ -124,3 +124,4 @@ ALPHA v0.0.2.2
     - Individually-recorded transaction history
     - Transactions now have recorded ids
     - Added a homemade encryption algorithm (and it's pretty damn unbreakable) if needed; encrypt.py
+    - transaction_history.html now functioning; accessible from account.html
